# Copyright (c) 2026, https://blog.03k.org. All rights reserved.

[workspace]
resolver = "2"
members = [
    "crates/sniffbox",
    "crates/sb-tproxy",
    "crates/sb-sniff",
    "crates/sb-outbound",
    "crates/sb-stats",
    "crates/sb-dns",
    "crates/sb-web",
    "crates/sb-ppgw",
]

exclude = [
    "crates/sb-sniff/fuzz",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "GPL-3.0-only"
authors      = ["blog.03k.org"]
repository   = "https://github.com/kkkgo/PaoPaoGateWay"

[workspace.dependencies]

tokio             = { version = "1", features = ["net", "io-util", "sync", "time", "signal", "macros", "rt-multi-thread", "fs"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
futures-util      = { version = "0.3", default-features = false, features = ["sink"] }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }

nix      = { version = "0.29", features = ["net", "socket", "uio"] }
socket2  = { version = "0.5", features = ["all"] }
libc     = "0.2"

bytes           = "1"
httparse        = "1"
sha2            = "0.10"
hex             = "0.4"
crossbeam-utils = "0.8"
dashmap         = "6"
parking_lot     = "0.12"
tempfile        = "3"
time            = { version = "0.3", features = ["formatting", "macros", "serde"] }
thiserror       = "2"
humantime-serde = "1"
arc-swap        = "1"
ipnet           = { version = "2", features = ["serde"] }

yaml-rust2      = "0.11"

ureq            = { version = "3", default-features = false, features = ["rustls", "socks-proxy", "gzip", "brotli"] }

regex-lite      = "0.1"

rustls          = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }

criterion       = { version = "0.5", default-features = false, features = ["cargo_bench_support", "async_tokio"] }

sb-tproxy   = { path = "crates/sb-tproxy" }
sb-sniff    = { path = "crates/sb-sniff" }
sb-outbound = { path = "crates/sb-outbound" }
sb-stats    = { path = "crates/sb-stats" }
sb-dns      = { path = "crates/sb-dns" }
sb-web      = { path = "crates/sb-web" }
sb-ppgw     = { path = "crates/sb-ppgw" }

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
opt-level     = 3

[profile.release-small]
lto           = "fat"
inherits  = "release"
opt-level = "z"
strip = true
debug = false
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug     = true
