# Copyright (c) 2026, https://blog.03k.org. All rights reserved.

[package]
name          = "sb-dns"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }

[dependencies]
parking_lot = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
ipnet       = { workspace = true }

[dev-dependencies]

sha2      = { workspace = true }
criterion = { workspace = true }
