# Copyright (c) 2026, https://blog.03k.org. All rights reserved.

[package]
name          = "sb-outbound"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }

[dependencies]
tokio        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
parking_lot  = { workspace = true }
arc-swap     = { workspace = true }
libc         = { workspace = true }
