# Copyright (c) 2026, https://blog.03k.org. All rights reserved.

[package]
name          = "sb-stats"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }

[dependencies]
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }
crossbeam-utils = { workspace = true }
dashmap         = { workspace = true }
parking_lot     = { workspace = true }
tempfile        = { workspace = true }
time            = { workspace = true }
libc            = { workspace = true }
arc-swap        = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
